tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unbraced-if-body.wyst
module demo
fn main() { if true return }
